--- a/app/src/main/res/layout/activity_i18n.xml
+++ b/app/src/main/res/layout/activity_i18n.xml
@@ -14,6 +14,26 @@
         android:id="@+id/get_result_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="@string/get_language_info"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/change_zh_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="@string/change_to_chinese"/>
+        <Button
+            android:id="@+id/change_en_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="@string/change_to_english"/>
+    </LinearLayout>
 </LinearLayout>
